--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-numpy
-pandas==0.17.1
-jupyter==1.0.0
+numpy>=1.11.1
+pandas>=0.17.1
+jupyter>=1.0.0
 
-coverage==4.1
-nose==1.3.7
-tornado==4.0.2
-flake8==2.5.2
+coverage>=4.1
+nose>=1.3.7
+pytest>=2.9.2
+tornado>=4.0.2
+flake8>=2.5.2
